--- a/FrontEnd/NextConfPro.Web/Views/Event/EventDelete.cshtml
+++ b/FrontEnd/NextConfPro.Web/Views/Event/EventDelete.cshtml
@@ -1,31 +1,31 @@
 ﻿@model EventDto
-<form asp-action="EventCreate">
+<form asp-action="EventDelete">
     <br />
     <div class="container border p-3">
-        <h1 class="text-white text-center">Create Event</h1>
-
+        <h1 class="text-white text-center">Delete Event</h1>
+        <input asp-for="Id" hidden />
         <hr />
         <div class="row">
             <div class="col-2">
                 <label class="control-label pt-2" style="font-size:20px;">Name</label>
             </div>
             <div class="col-10 pb-3">
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <input asp-for="Name" disabled class="form-control" />
+             
             </div>
             <div class="col-2">
                 <label class="control-label pt-2" style="font-size:20px;">Date & Time </label>
             </div>
             <div class="col-10 pb-3">
-                <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
+                <input asp-for="Date" disabled class="form-control" />
+               
             </div>
             <div class="col-2">
                 <label class="control-label pt-2" style="font-size:20px;">Location</label>
             </div>
             <div class="col-10 pb-3">
-                <input asp-for="Location" class="form-control" />
-                <span asp-validation-for="Location" class="text-danger"></span>
+                <input asp-for="Location" disabled class="form-control" />
+              
             </div>
 
             <div class="col-5 offset-2">
@@ -33,7 +33,7 @@
                 <a asp-action="EventIndex" class="btn-primary btn form-control ">Back to List</a>
             </div>
             <div class="col-5">
-                <input type="submit" value="Create" class="btn btn-success form-control" />
+                <input type="submit" value="Delete" class="btn btn-danger form-control" />
 
             </div>
 
@@ -43,7 +43,3 @@
         </div>
     </div>
 </form>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
